# mpc-lab

./: .gitignore  README.md  mypy.ini  nlp_hess_l.casadi  pyproject.toml  verify_env.py
configs/controller/: README.md
configs/model/: README.md
configs/safety/: README.md
configs/sim/: README.md
configs/solver/: README.md
envSetup/: requirements-optional.txt  requirements.txt  setup_env.sh
examples/: diffdrive_linear_mpc_rollout.py  hello_pipeline.py  nmpc_attitude_demo.py  nmpc_attitude_rollout.py  nmpc_attitude_tv_rollout.py  nmpc_rover_demo.py  nmpc_rover_rollout.py  nmpc_rover_tracking.py  nmpc_rover_tv_rollout.py
mpc_lab/: __init__.py  constants.py
mpc_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mpc_lab/constraints/: boxes.py  linear_sets.py
mpc_lab/controllers/: base.py  cbf_filter.py  mpc_koopman.py  mpc_linear.py  mpc_linear_mock.py  mpc_nonlinear.py
mpc_lab/core/: quat.py  scaling.py  specs.py  traj.py  types.py
mpc_lab/data/: datasets.py  io.py  normalize.py
mpc_lab/examples/: nmpc_attitude_demo.py  nmpc_attitude_tracking.py  nmpc_attitude_tracking_constrained.py  nmpc_rover_tracking_constrained.py
mpc_lab/koopman/: autoenc.py  bundle.py  features.py  learners.py  metrics.py
mpc_lab/modeling/: diffdrive.py
nmpc/: build_attitude_tv.py  build_rover_tv.py  costs.py
scripts/: bootstrap_git.sh  dev_install.sh
tests/: test_attitude_smoke.py  test_diffdrive_linear_mpc.py  test_imports.py  test_plugins_probe.py  test_rover_smoke.py  test_smoke_phase1.py
utils/: logging.py  plotting.py  refs.py  trajectory.py
(+44 files in other folders)
