[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-lab"
version = "0.1.0"
description = "Scaffold for MPC + Koopman + CBF research using CasADi"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "casadi>=3.6.7",
    "pydantic>=2.7",
    "hydra-core>=1.3",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["./"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = false
no_implicit_optional = true
ignore_missing_imports = true
